--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="colorPrimary">#9064F6</color>
-    <color name="colorPrimaryDark">#591BE5</color>
+    <color name="colorPrimary">#f0f0f0</color>
+    <color name="colorPrimaryDark">#d9d9d9</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="textColorPrimary">#616161</color>
     <color name="viewBackground">@color/White</color>
@@ -64,7 +64,6 @@
     <color name="Grey">#9e9e9e</color>
     <color name="Blue_Grey">#607d8b</color>
 
-    <color name="Grey50">#FAFAFA</color>
     <color name="Grey100">#F5F5F5</color>
     <color name="Grey200">#EEEEEE</color>
     <color name="Grey300">#E0E0E0</color>
@@ -74,4 +73,19 @@
     <color name="Grey700">#616161</color>
     <color name="Grey800">#424242</color>
     <color name="Grey900">#212121</color>
+
+    <color name="gray1">#ffffff</color>
+    <color name="gray2">#fafafa</color>
+    <color name="gray3">#f5f5f5</color>
+    <color name="gray4">#f0f0f0</color>
+    <color name="gray5">#d9d9d9</color>
+    <color name="gray6">#bfbfbf</color>
+    <color name="gray7">#8c8c8c</color>
+    <color name="gray8">#595959</color>
+    <color name="gray9">#434343</color>
+    <color name="gray10">#262626</color>
+    <color name="gray11">#1f1f1f</color>
+    <color name="gray12">#141414</color>
+    <color name="gray13">#000000</color>
+
 </resources>
