--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.LinWanAndroidmvvm" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/gray4</item>
+        <item name="colorPrimary">@color/Green</item>
         <item name="colorPrimaryVariant">@color/gray4</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
