--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -84,6 +84,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginTop="60dp"
             android:layout_marginEnd="30dp"
+            android:enabled="@{viewModel.isEnable}"
             android:text="@string/login"
             android:textColor="@color/white"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPwd"
