--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:bind="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <import type="com.lx.linwanandroid_mvvm.model.bean.Title"/>
 
+        <variable
+            name="title"
+            type="Title" />
     </data>
 
     <androidx.drawerlayout.widget.DrawerLayout
@@ -18,9 +23,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <include layout="@layout/toolbar" />
+            <include
+                android:id="@+id/icToolbar"
+                layout="@layout/toolbar"
+                bind:title="@{title}"/>
 
-            <include layout="@layout/container" />
+            <include
+                android:id="@+id/icContainer"
+                layout="@layout/container" />
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottomNavigation"
@@ -30,7 +40,8 @@
                 android:layout_gravity="bottom"
                 android:background="@color/viewBackground"
                 app:elevation="@dimen/dp_16"
-                app:layout_behavior=".widgets.behavior.BottomNavigationBehavior"/>
+                app:layout_behavior=".widgets.behavior.BottomNavigationBehavior"
+                app:menu="@menu/bottom_navigation_main"/>
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/floatingActionButton"
