--- a/app/src/main/res/layout/fragment_home_layout.xml
+++ b/app/src/main/res/layout/fragment_home_layout.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="adapter"
+            type="com.lx.linwanandroid_mvvm.ui.main.home.HomeAdapter" />
     </data>
 
     <com.lx.linwanandroid_mvvm.widgets.statusView.MultiStatusView
@@ -25,7 +27,9 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 style="@style/RecyclerViewStyle"
-                tools:listitem="@layout/item_main_list" />
+                tools:listitem="@layout/item_main_list"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:adpater="@{adapter}"/>
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
