--- a/app/src/main/res/layout/item_main_list.xml
+++ b/app/src/main/res/layout/item_main_list.xml
@@ -1,152 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cardView"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?attr/selectableItemBackground"
-    app:cardBackgroundColor="@color/viewBackground"
-    app:cardCornerRadius="@dimen/dp_1"
-    app:cardElevation="@dimen/dp_1">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <RelativeLayout
+    <data>
+        <variable
+            name="view"
+            type="android.view.View" />
+        <variable
+            name="viewModel"
+            type="com.lx.linwanandroid_mvvm.model.bean.HomeArticle.DatasBean" />
+
+        <variable
+            name="unBox"
+            type="com.lx.linwanandroid_mvvm.utils.Unbox" />
+    </data>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/dp_10"
-        android:paddingRight="@dimen/dp_10"
-        android:paddingBottom="@dimen/dp_10">
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?attr/selectableItemBackground"
+        app:cardBackgroundColor="@color/viewBackground"
+        app:cardCornerRadius="@dimen/dp_1"
+        app:cardElevation="@dimen/dp_1">
 
-        <TextView
-            android:id="@+id/tv_article_top"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:background="@drawable/bg_fresh"
-            android:paddingLeft="@dimen/dp_4"
-            android:paddingTop="@dimen/dp_2"
-            android:paddingRight="@dimen/dp_4"
-            android:paddingBottom="@dimen/dp_2"
-            android:text="@string/top_tip"
-            android:textColor="@color/Red"
-            android:textSize="10sp"
-            android:visibility="gone"
-            tools:visibility="visible" />
-
-        <TextView
-            android:id="@+id/tv_article_fresh"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_toRightOf="@+id/tv_article_top"
-            android:background="@drawable/bg_fresh"
-            android:paddingLeft="@dimen/dp_4"
-            android:paddingTop="@dimen/dp_2"
-            android:paddingRight="@dimen/dp_4"
-            android:paddingBottom="@dimen/dp_2"
-            android:text="@string/new_fresh"
-            android:textColor="@color/Red"
-            android:textSize="10sp"
-            android:visibility="gone"
-            tools:visibility="visible" />
-
-        <TextView
-            android:id="@+id/tv_article_tag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_toRightOf="@+id/tv_article_fresh"
-            android:background="@drawable/bg_tag"
-            android:paddingLeft="@dimen/dp_4"
-            android:paddingTop="@dimen/dp_2"
-            android:paddingRight="@dimen/dp_4"
-            android:paddingBottom="@dimen/dp_2"
-            android:textColor="@color/colorAccent"
-            android:textSize="10sp"
-            android:visibility="gone"
-            tools:text="@string/app_name"
-            tools:visibility="visible" />
-
-        <TextView
-            android:id="@+id/tv_article_author"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/tv_article_top"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_toRightOf="@+id/tv_article_tag"
-            android:textColor="@color/item_author"
-            android:textSize="12sp"
-            tools:text="@string/app_name" />
-
-        <TextView
-            android:id="@+id/tv_article_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/tv_article_top"
-            android:layout_alignParentRight="true"
-            android:textColor="@color/item_date"
-            android:textSize="12sp"
-            tools:text="@string/app_name" />
-
-        <ImageView
-            android:id="@+id/iv_article_thumbnail"
-            android:layout_width="@dimen/dp_120"
-            android:layout_height="@dimen/dp_90"
-            android:layout_below="@+id/tv_article_author"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginTop="@dimen/dp_8"
-            android:scaleType="centerCrop" />
-
-        <TextView
-            android:id="@+id/tv_article_title"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_article_author"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginTop="@dimen/dp_8"
-            android:layout_toRightOf="@+id/iv_article_thumbnail"
-            android:ellipsize="end"
-            android:gravity="top|start"
-            android:lineSpacingExtra="2dp"
-            android:maxLines="2"
-            android:paddingBottom="@dimen/dp_6"
-            android:textColor="@color/item_title"
-            android:textSize="16sp" />
+            android:paddingTop="@dimen/dp_10"
+            android:paddingEnd="@dimen/dp_10"
+            android:paddingBottom="@dimen/dp_10">
 
-        <TextView
-            android:id="@+id/tv_article_chapterName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_article_title"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="@dimen/dp_10"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginTop="@dimen/dp_10"
-            android:layout_marginEnd="@dimen/dp_10"
-            android:layout_marginRight="@dimen/dp_10"
-            android:layout_toRightOf="@+id/iv_article_thumbnail"
-            android:gravity="center"
-            android:textColor="@color/item_chapter"
-            android:textSize="@dimen/dp_12"
-            tools:text="@string/app_name" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/iv_like"
+            <TextView
+                android:id="@+id/tv_article_top"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_like_not" />
+                android:layout_marginStart="@dimen/dp_10"
+                android:background="@drawable/bg_fresh"
+                android:paddingLeft="@dimen/dp_4"
+                android:paddingTop="@dimen/dp_2"
+                android:paddingRight="@dimen/dp_4"
+                android:paddingBottom="@dimen/dp_2"
+                android:text="@string/top_tip"
+                android:textColor="@color/Red"
+                android:textSize="@dimen/sp_10"
+                android:visibility="@{viewModel.top ? view.VISIBLE : view.GONE}"
+                tools:visibility="visible" />
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/tv_article_fresh"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dp_10"
+                android:layout_toEndOf="@+id/tv_article_top"
+                android:background="@drawable/bg_fresh"
+                android:paddingLeft="@dimen/dp_4"
+                android:paddingTop="@dimen/dp_2"
+                android:paddingRight="@dimen/dp_4"
+                android:paddingBottom="@dimen/dp_2"
+                android:text="@string/new_fresh"
+                android:textColor="@color/Red"
+                android:textSize="@dimen/sp_10"
+                android:visibility="@{viewModel.fresh ? view.VISIBLE: view.GONE}"
+                tools:visibility="visible" />
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/tv_article_tag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dp_10"
+                android:layout_toEndOf="@+id/tv_article_fresh"
+                android:background="@drawable/bg_tag"
+                android:paddingLeft="@dimen/dp_4"
+                android:paddingTop="@dimen/dp_2"
+                android:paddingRight="@dimen/dp_4"
+                android:paddingBottom="@dimen/dp_2"
+                android:textColor="@color/colorAccent"
+                android:textSize="@dimen/sp_10"
+                android:visibility="gone"
+                tools:text="@string/app_name"
+                tools:visibility="visible" />
 
-</androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/tv_article_author"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/tv_article_top"
+                android:layout_marginStart="@dimen/dp_10"
+                android:layout_toEndOf="@+id/tv_article_tag"
+                android:textColor="@color/item_author"
+                android:textSize="12sp"
+                tools:text="@string/app_name" />
+
+            <TextView
+                android:id="@+id/tv_article_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/tv_article_top"
+                android:layout_alignParentEnd="true"
+                android:textColor="@color/item_date"
+                android:textSize="12sp"
+                android:text="@{viewModel.niceDate}"
+                tools:text="@string/app_name" />
+
+            <ImageView
+                android:id="@+id/iv_article_thumbnail"
+                android:layout_width="@dimen/dp_120"
+                android:layout_height="@dimen/dp_90"
+                android:layout_below="@+id/tv_article_author"
+                android:layout_marginStart="@dimen/dp_10"
+                android:layout_marginTop="@dimen/dp_8"
+                android:scaleType="centerCrop"
+                android:visibility="gone"
+                app:imageUrl="@{unBox.unBox(viewModel.envelopePic)}"/>
+
+            <TextView
+                android:id="@+id/tv_article_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_article_author"
+                android:layout_marginStart="@dimen/dp_10"
+                android:layout_marginTop="@dimen/dp_8"
+                android:layout_toEndOf="@+id/iv_article_thumbnail"
+                android:ellipsize="end"
+                android:gravity="top|start"
+                android:lineSpacingExtra="2dp"
+                android:maxLines="2"
+                android:paddingBottom="@dimen/dp_6"
+                android:textColor="@color/item_title"
+                android:textSize="16sp"
+                app:htmlText="@{viewModel.title}"/>
+
+            <TextView
+                android:id="@+id/tv_article_chapterName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_article_title"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="@dimen/dp_10"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginTop="@dimen/dp_10"
+                android:layout_marginEnd="@dimen/dp_10"
+                android:layout_marginRight="@dimen/dp_10"
+                android:layout_toEndOf="@+id/iv_article_thumbnail"
+                android:gravity="center"
+                android:textColor="@color/item_chapter"
+                android:textSize="@dimen/sp_12"
+                android:text="@{viewModel.chapterName}"
+                tools:text="@string/app_name" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/iv_like"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_like_not"
+                    app:articleStar="@{viewModel.collect}"/>
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
+</layout>
