--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="colorPrimary">#f0f0f0</color>
+    <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryDark">#d9d9d9</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="textColorPrimary">#616161</color>
