--- a/app/src/main/res/layout/activity_audiorecord.xml
+++ b/app/src/main/res/layout/activity_audiorecord.xml
@@ -6,9 +6,16 @@
         <variable
             name="title"
             type="com.lx.linwanandroid_mvvm.model.bean.Title" />
+        <import type="android.view.View"/>
         <variable
             name="viewModel"
             type="com.lx.linwanandroid_mvvm.audioRecord.AudioViewModel" />
+        <variable
+            name="adapter"
+            type="com.lx.linwanandroid_mvvm.audioRecord.AudioAdapter" />
+        <variable
+            name="handler"
+            type="com.lx.linwanandroid_mvvm.audioRecord.AudioActivity" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,9 +30,32 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/titleBar" />
+            app:layout_constraintTop_toBottomOf="@+id/titleBar"
+            app:adpater="@{adapter}"/>
+
+        <LinearLayout
+            android:id="@+id/llWave"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_220"
+            android:orientation="vertical"
+            android:background="@drawable/bg_bottom_audio"
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+            android:visibility="@{viewModel.isRecording ? View.VISIBLE : View.GONE}">
+            <com.lx.linwanandroid_mvvm.widgets.RhythmView
+                android:id="@+id/waveView"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_90"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_30"
+                android:textColor="@color/Black"
+                android:textSize="@dimen/sp_15"
+                android:gravity="center"
+                android:text="@{viewModel.ayduiTimeStr}"/>
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -39,10 +69,33 @@
             android:gravity="center">
 
             <ImageView
+                android:id="@+id/ivStart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/shape_circle" />
+                android:background="@drawable/shape_circle"
+                android:visibility="@{viewModel.isRecording ? View.GONE : View.VISIBLE}" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:visibility="@{viewModel.isRecording ? View.VISIBLE : View.GONE}">
+                <ImageView
+                    android:id="@+id/ivPause"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_pause"
+                    android:layout_marginEnd="@dimen/dp_50"
+                    />
+                <ImageView
+                    android:id="@+id/ivStop"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_stop"
+                    android:onClick="@{handler::stopRecord}"/>
+            </LinearLayout>
         </LinearLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
