--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -43,4 +43,12 @@
         <item name="android:scrollbarSize">@dimen/dp_2</item>
         <item name="android:scrollbars">vertical</item>
     </style>
+
+    <style name="progressBarHorizontal_color" parent="android:Widget.ProgressBar.Horizontal">
+        <item name="android:indeterminateOnly">false</item>
+        <!-- 这个属性就是配置进度的颜色和背景的颜色 -->
+        <item name="android:progressDrawable">@drawable/shaoe_progress</item>
+        <item name="android:minHeight">5dip</item>
+        <item name="android:maxHeight">5dip</item>
+    </style>
 </resources>
