--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -39,6 +39,10 @@
             android:icon="@drawable/ic_logout_white_24dp"
             android:title="@string/nav_logout" />
         <item
+            android:id="@+id/nav_videoPlay"
+            android:icon="@drawable/ic_video"
+            android:title="@string/nav_video"/>
+        <item
             android:id="@+id/nav_rtc"
             android:icon="@drawable/ic_rtc"
             android:title="@string/nav_rtc"/>
