--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -38,7 +38,8 @@
                 android:layout_height="wrap_content"
                 style="@style/Widget.Design.BottomNavigationView"
                 android:layout_gravity="bottom"
-                android:background="@color/viewBackground"
+                android:background="@drawable/shape_rectangle"
+                android:layout_margin="@dimen/dp_10"
                 app:elevation="@dimen/dp_16"
                 app:layout_behavior=".widgets.behavior.BottomNavigationBehavior"
                 app:menu="@menu/bottom_navigation_main"/>
@@ -52,6 +53,12 @@
                 android:layout_marginBottom="60dp"
                 app:layout_behavior=".widgets.behavior.ScaleDownShowBehavior"
                 app:srcCompat="@drawable/ic_arrow_upward_white_24dp" />
+            <View
+                android:id="@+id/viewTest"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_50"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="@dimen/dp_50"/>
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
         <com.google.android.material.navigation.NavigationView
