--- a/app/src/main/res/layout/activity_trtc_navigation.xml
+++ b/app/src/main/res/layout/activity_trtc_navigation.xml
@@ -4,21 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="title"
+            type="com.lx.linwanandroid_mvvm.model.bean.Title" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <include
+            android:id="@+id/titleBar"
+            layout="@layout/toolbar" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:listitem="@layout/item_navigation"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/titleBar"
+            tools:listitem="@layout/item_navigation" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
